# bg-remover

./: .gitignore  API_UPDATE_DOCUMENTATION.md  AUTO_UPDATE_README.md  BUILD_GUIDE.md  CHANGELOG.md  CONFIGURATION_SUMMARY.md  CONFIG_GUIDE.md  DEPLOYMENT.md  LICENSE  LICENSE.txt  MintreuBgRemover.spec  MintreuyBGRemover.spec  PROJECT_SUMMARY.md  QUICK_START.md  README.md  build_complete_offline.py  config.ini  config_loader.py  installMaker.py  main.py  pyproject.toml  requirements.txt  run.bat  run_tests.bat  test_application.py  updater.py  version.json.example
hooks/: hook-onnxruntime.py
